--- a/farmer.html
+++ b/farmer.html
@@ -16,12 +16,12 @@
       <div class="row">
         <div class="col-md-12">
           <!-- Farmers details -->
-          <img src="" alt="">
+          <img src="img/user.png" alt="User Avatar" class="avatar">
           <p>Name :<span class="farmerName"></span></p>
           <p>Contact :<span class="farmerContact"></span></p>
           <p>Location :<span class="farmerLocation"></span></p>
           <!-- Add new product button -->
-          <button type="button" name="button" id="AddFarmer" data-toggle="modal" data-target="#myModal">Add new Product</button>
+          <button type="button" name="button" id="AddFarmer" class="btn btn-lg">Add new Product</button>
           <!-- Add new product form -->
           <div class="modal newProduce" id="myModal">
             <div class="modal-content">
@@ -44,9 +44,9 @@
                 </div>
                 <div class="form-group">
                   <label for="image">Image :</label>
-                  <input type="file" name="pic" accept="image/*" id="image" class="file" >
+                  <input type="file" name="pic" accept="image/*" id="image" class="form-control-file" >
                 </div>
-                <button type="submit" name="button" id="marketplace">Add Product</button>
+                <button type="submit" name="button" id="marketplace" class="btn btn-default">Add Product</button>
               </form>
 
         </div>
@@ -58,14 +58,23 @@
           <thead>
             <tr>
         		  <th> Product Name </th>
-              <th> Price </th>
-        		  <th> Quantity </th>
+              <th> Price (Ksh)</th>
+        		  <th> Quantity (Kg)</th>
               <th> Image </th>
+              <th> Status </th>
         	 </tr>
+           <tr>
+             <td>Tomatoes</td>
+             <td>200</td>
+             <td>10</td>
+             <td><img src="img/farm.jpg" alt="Tomatoes" class="img-responsive"></td>
+             <td>Sold</td>
+          </tr>
          </thead>
          <tbody>
          </tbody>
        </table>
+
 </div>
 
         </div>
