--- a/farmer.html
+++ b/farmer.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Inconsolata|Pacifico|Quicksand|Raleway" rel="stylesheet">
     <script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
-    <!-- <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <div class="row sama">
         <div class="col-md-12">
           <!-- Farmers details -->
           <img src="img/user.png" alt="User Avatar" class="avatar">
@@ -21,8 +21,40 @@
           <p>Contact :<span class="farmerContact"></span></p>
           <p>Location :<span class="farmerLocation"></span></p>
           <!-- Add new product button -->
-          <button type="button" name="button" id="AddFarmer" class="btn btn-lg">Add new Product</button>
+          <button type="button" name="button" id="AddFarmer" class="btn btn-lg" data-toggle="modal" data-backdrop="true">Add new Product</button>
           <!-- Add new product form -->
+
+
+
+      <div class="">
+        <table class="table controls controls-row">
+          <thead>
+            <tr>
+        		  <th> Product Name </th>
+              <th> Price (Ksh)</th>
+        		  <th> Quantity (Kg)</th>
+              <th> Image </th>
+              <th> Status </th>
+        	 </tr>
+           <tr>
+             <td>Tomatoes</td>
+             <td>200</td>
+             <td>10</td>
+             <td><img src="img/farm.jpg" alt="Tomatoes" class="img-responsive"></td>
+             <td>Sold</td>
+          </tr>
+         </thead>
+         <tbody>
+         </tbody>
+       </table>
+
+</div>
+
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
           <div class="modal newProduce" id="myModal">
             <div class="modal-content">
             <!-- <div class="modal fade" id="myModal" role="dialog">
@@ -52,33 +84,10 @@
         </div>
       </div>
 
-
-      <div class="">
-        <table class="table controls controls-row">
-          <thead>
-            <tr>
-        		  <th> Product Name </th>
-              <th> Price (Ksh)</th>
-        		  <th> Quantity (Kg)</th>
-              <th> Image </th>
-              <th> Status </th>
-        	 </tr>
-           <tr>
-             <td>Tomatoes</td>
-             <td>200</td>
-             <td>10</td>
-             <td><img src="img/farm.jpg" alt="Tomatoes" class="img-responsive"></td>
-             <td>Sold</td>
-          </tr>
-         </thead>
-         <tbody>
-         </tbody>
-       </table>
-
-</div>
-
         </div>
+
       </div>
+
     </div>
 
   </body>
