form clears after submit

--- a/farmer.html
+++ b/farmer.html
@@ -87,7 +87,7 @@
               <div class="modal-dialog"> -->
               <span class="close">&times;</span>
               <h1>Add Farm Produce</h1>
-              <form>
+              <form class="farmer">
                 <div class="form-group">
                   <label for="farmProduct">Farm Product :</label>
                   <input type="text" class="form-control" id="farmProduct" placeholder="Farm Produce" required>
