class footer added

--- a/farmer.html
+++ b/farmer.html
@@ -115,6 +115,12 @@
       </div>
 
     </div>
+    <div class="footer clearfix">
+              <a href="#">Farmers Market</a>
+              <p>
+                  Copyright © 2017 All right reserved
+              </p>
+          </div>
 
   </body>
 </html>
